// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allOf operator support renders simple allOf 1`] = `
"<div class="openapi">

# allOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "foo": "string",
    "name": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 foo 
|
 **Type:** string 
||

||
 name 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 baz 
|
 **Type:** string 
||

||
 name 
|
 **Type:** string

<span class="openapi-description-annotation">Default:</span> \`a\` 
||

||
 type 
|
 **Type:** string 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`allOf operator support renders single allOf 1`] = `
"<div class="openapi">

# allOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 pet 
|
 **Type:** [Cat](#cat)

Cat class 
|||#

</div>

<div class="openapi-entity">

### Cat

Cat class

#|||
 **Name** 
|
 **Description** 
||

||
 foo 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 pet 
|
 **Type:** [Cat](#cat)

Cat class 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;
